--- a/lib/index.html
+++ b/lib/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script defer="defer" src="index.js"></script>
-</head>
+<script defer src="index.js"></script></head>
 
 <body>
-    <div>轮播图</div>
-    <div>tab栏切换</div>
+    <div class="marquee">轮播图</div>
+    <div class="tab">tab栏切换</div>
 </body>
+<!-- <script src="/dist/main.js"></script> -->
 
 </html>
